deployment/dependencies/nyxid-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyxid-backend
  namespace: ${NAMESPACE}
spec:
  selector:
    app: nyxid-backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
